workaround for collapsing border bug in Safari and Konqueror
svn commit r12951

--- a/www/styles/swat-calendar.css
+++ b/www/styles/swat-calendar.css
@@ -33,14 +33,15 @@
 }
 
 table.swat-calendar-frame {
-	border: 1px solid #ccc;
-	border-collapse: collapse;
+	border-top: 1px solid #ccc;
+	border-left: 1px solid #ccc;
 }
 
 .swat-calendar-control-frame {
 	text-align: center;
 	padding: 3px;
 	border-bottom: 1px solid #ccc;
+	border-right: 1px solid #ccc;
 	background: #f6f2ea url(../images/swat-calendar-header-background.png) top left repeat-x;
 	vertical-align: center;
 }
@@ -68,6 +69,17 @@ th.swat-calendar-header {
 	text-align: center;
 	font-weight: normal;
 	font-size: x-small;
+	border-bottom: 1px solid #ccc;
+	padding: 2px;
+}
+
+th.swat-calendar-last-header {
+	width: 2em;
+	text-align: center;
+	font-weight: normal;
+	font-size: x-small;
+	border-bottom: 1px solid #ccc;
+	border-right: 1px solid #ccc;
 	padding: 2px;
 }
 
@@ -75,7 +87,8 @@ th.swat-calendar-header {
 	text-align: center;
 	cursor: pointer;
 	cursor: hand;
-	border: 1px solid #ccc;
+	border-bottom: 1px solid #ccc;
+	border-right: 1px solid #ccc;
 	padding: 2px;
 }
 
@@ -89,20 +102,23 @@ th.swat-calendar-header {
 	text-align: center;
 	cursor: pointer;
 	cursor: hand;
-	border: 1px solid #ccc;
+	border-bottom: 1px solid #ccc;
+	border-right: 1px solid #ccc;
 	padding: 2px;
 }
 
 .swat-calendar-invalid-cell {
 	text-align: center;
 	color: #ccc;
-	border: 1px solid #ccc;
+	border-bottom: 1px solid #ccc;
+	border-right: 1px solid #ccc;
 	padding: 2px;
 }
 
 .swat-calendar-empty-cell {
 	padding: 2px;
-	border: 1px #ccc solid;
+	border-bottom: 1px solid #ccc;
+	border-right: 1px solid #ccc;
 	background: #eee;
 	text-align: center;
 	color: #888;
@@ -111,6 +127,8 @@ th.swat-calendar-header {
 td.swat-calendar-close-controls {
 	text-align: center;
 	padding: 1px 0 3px 0;
+	border-bottom: 1px solid #ccc;
+	border-right: 1px solid #ccc;
 }
 
 .swat-calendar-close-controls a {
